# BytebankHackathon

./: .env.example  README.md  dynamic_allocation.ipynb  main.py  pyproject.toml
agents/: nlp_to_filter_agent.py  stock_analyzer.py
backend/: .gitignore  alembic.ini  docker-compose.yml  example_requests.md  main.py  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_create_users_table.py
backend/app/: auth.py  database.py  main.py  models.py  schemas.py
backend/app/routes/: auth.py  main_router.py
data/mappings/: english_to_filter.json  expected_output.json  operations.json
data/prompts/: filter_agent_prompt.txt  stock_analyzer_prompt.txt
file_generator/: pdf_generator.py
optimizers/: allocation_optimizer.py
