[project]
name = "bytebankhackathon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.124.2",
    "jose>=1.0.0",
    "numpy>=2.3.5",
    "openai>=2.9.0",
    "pandas>=2.3.3",
    "pydantic[email]>=2.12.5",
    "reportlab>=4.4.6",
    "requests>=2.32.5",
    "scipy>=1.16.3",
    "sqlalchemy>=2.0.45",
    "uvicorn>=0.38.0",
    "yfinance>=0.2.66",
]
